Added check that location names match between input data files

--- a/projects/covid-19/jupyter_notebooks/s1_assemble_JohnsHopkins_data.ipynb
+++ b/projects/covid-19/jupyter_notebooks/s1_assemble_JohnsHopkins_data.ipynb
@@ -24,28 +24,29 @@
     "### Phase 1:\n",
     "\n",
     "   * 2020-02-02 to 2020-02-17\n",
-    "   * Individual decoding of WHO daily reports, collection of data from China, Taiwan, \n",
+    "   * Data gathering: Individual decoding of WHO daily reports, collection of data from China, Taiwan, \n",
     "    and other countries. Data collection was time consuming and aligning timestamps was\n",
     "    problematic. \n",
-    "   * Visualizations focused on communicating the rapidly changing data. \n",
-    "   * Online visualizations built with Tableau Public.\n",
+    "   * Data analysis: Focus on keeping up with the online updates from China and communicating the rapidly changing data.\n",
+    "   * Data reporting: Online visualizations were built with Tableau Public.\n",
     "    \n",
     "### Phase 2:\n",
     "\n",
     "   * 2020-02-18 to 2020-03-11\n",
-    "   * Primary daily counts only from the Johns-Hopkins GitHub repository at\n",
+    "   * Data gathering: Transitioned to using only the daily reports from the Johns-Hopkins GitHub repository at\n",
     "   https://systems.jhu.edu/research/public-health/ncov/ csse_covid_19_data/csse_covid_19_daily_reports  \n",
-    "   * This simpified data handling and improved consistency with other reports.\n",
-    "   * This phase looked at discrepancies between the data from China and that from other\n",
+    "       * This simpified data handling and improved consistency with other reports.\n",
+    "   * Data analysis: This phase looked at discrepancies between the data from China and that from other\n",
     "   parts of the world.\n",
-    "   * Online visualizations built with Tableau Public.\n",
+    "   * Data reporting: Online visualizations built with Tableau Public.\n",
     "    \n",
     "### Phase 3: \n",
     "\n",
     "   * 2020-03-12 to present\n",
-    "   * Primary daily counts continue to be from the Johns-Hopkins GitHub repository.\n",
-    "   * Tracking the U.S. response in particular as both citizens and government entities decide \n",
-    "   how to react."
+    "   * Data gathering: Daily statistics (confirmed, recovered, deaths) are from the Johns-Hopkins GitHub repository.\n",
+    "   * Data analysis: Tracking the U.S. response in particular as both citizens and government entities decide \n",
+    "   how to react.\n",
+    "   * Data reporting: Online visualizations built with Tableau Public initially."
    ]
   },
   {
@@ -70,7 +71,9 @@
    "source": [
     "# Versions of this notebook\n",
     "# v1 - Assemble the time series for confirmed, deaths, and recoveries into a single, \n",
-    "#      long-file format."
+    "#      long-file format.\n",
+    "# v2 - Begin checking that the conditions for merge don't drop data; place names are\n",
+    "#      changing, e.g. from just US state to county, state codes."
    ]
   },
   {
@@ -121,6 +124,158 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Check that the location columns will line up for merge later\n",
+    "df_locations = pd.DataFrame(columns=['ps_c','cr_c'])\n",
+    "#df_confirmed.columns\n",
+    "\n",
+    "df_locations[['ps_c','cr_c']] = df_confirmed[['Province/State','Country/Region']]\n",
+    "df_locations[['ps_d','cr_d']] = df_deaths[['Province/State','Country/Region']]\n",
+    "df_locations[['ps_r','cr_r']] = df_recovered[['Province/State','Country/Region']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ps_c</th>\n",
+       "      <th>cr_c</th>\n",
+       "      <th>ps_d</th>\n",
+       "      <th>cr_d</th>\n",
+       "      <th>ps_r</th>\n",
+       "      <th>cr_r</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>no text</td>\n",
+       "      <td>Thailand</td>\n",
+       "      <td>no text</td>\n",
+       "      <td>Thailand</td>\n",
+       "      <td>no text</td>\n",
+       "      <td>Thailand</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>no text</td>\n",
+       "      <td>Japan</td>\n",
+       "      <td>no text</td>\n",
+       "      <td>Japan</td>\n",
+       "      <td>no text</td>\n",
+       "      <td>Japan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>no text</td>\n",
+       "      <td>Singapore</td>\n",
+       "      <td>no text</td>\n",
+       "      <td>Singapore</td>\n",
+       "      <td>no text</td>\n",
+       "      <td>Singapore</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>no text</td>\n",
+       "      <td>Nepal</td>\n",
+       "      <td>no text</td>\n",
+       "      <td>Nepal</td>\n",
+       "      <td>no text</td>\n",
+       "      <td>Nepal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>no text</td>\n",
+       "      <td>Malaysia</td>\n",
+       "      <td>no text</td>\n",
+       "      <td>Malaysia</td>\n",
+       "      <td>no text</td>\n",
+       "      <td>Malaysia</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ps_c       cr_c     ps_d       cr_d     ps_r       cr_r\n",
+       "0  no text   Thailand  no text   Thailand  no text   Thailand\n",
+       "1  no text      Japan  no text      Japan  no text      Japan\n",
+       "2  no text  Singapore  no text  Singapore  no text  Singapore\n",
+       "3  no text      Nepal  no text      Nepal  no text      Nepal\n",
+       "4  no text   Malaysia  no text   Malaysia  no text   Malaysia"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_locations.fillna('no text',inplace=True)\n",
+    "df_locations.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of mismatched location columns: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Added in v2 -- check for mismatched location names between the files\n",
+    "\n",
+    "def check_isMisMatch(a,b,c,d,e,f):\n",
+    "    #print(type(a))\n",
+    "    #print(a)\n",
+    "    \n",
+    "    if ((a == b) & (a == c) & (d == e) & (d == f)):\n",
+    "        return False \n",
+    "    else:\n",
+    "        print(\"mismatch on row! {}\".format(one_row))\n",
+    "        return True\n",
+    "\n",
+    "\n",
+    "df_locations['isMisMatch'] = df_locations.apply(lambda row: check_isMisMatch(row['ps_c'],row['ps_d'],row['ps_r'],\\\n",
+    "                                                                             row['cr_c'],row['cr_d'],row['cr_r']),\\\n",
+    "                                                                    axis=1)\n",
+    "\n",
+    "print(\"Number of mismatched location columns: {}\".format(df_locations['isMisMatch'].sum()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def wide_to_long(dfin: pd.core.frame.DataFrame, case_type: str) -> pd.core.frame.DataFrame:\n",
     "    '''Melt a wide time series into a long data frame\n",
     "        INPUT:      dfin      DataFrame\n",
@@ -141,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +387,7 @@
        "4            NaN       Malaysia   2.5000  112.5000  1/22/20          0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +490,7 @@
        "4            NaN       Malaysia   2.5000  112.5000  1/22/20       0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +593,7 @@
        "4            NaN       Malaysia   2.5000  112.5000  1/22/20          0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +730,7 @@
        "4       0          0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,15 +751,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-03-12_163107\n",
-      "consolidated_COVID-19_2020-03-12_163107UTC.csv\n"
+      "2020-03-12_215749\n",
+      "consolidated_COVID-19_2020-03-12_215749UTC.csv\n"
      ]
     }
    ],
@@ -626,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
