flagged the check_match() routine; needs to be refactored

--- a/projects/covid-19/jupyter_notebooks/s1_assemble_JohnsHopkins_data.ipynb
+++ b/projects/covid-19/jupyter_notebooks/s1_assemble_JohnsHopkins_data.ipynb
@@ -6,47 +6,7 @@
    "source": [
     "# COVID-19 - A Study of Imperfect Data\n",
     "\n",
-    "In this developing situation, it is difficult to have accurate, clean data. The factors\n",
-    "that contribute -- lack of testing capability, overwhelmed medical systems, \n",
-    "events spanning the full 24 hours worth of time zones, \n",
-    "and a mix of other intentional or unintentional missing information -- can't be controlled.\n",
-    "\n",
-    "What can still be studied, though, is the point at which both individuals and governments\n",
-    "take action as they see the data and begin to form questions and have concerns."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Evolution of this project:\n",
-    "\n",
-    "### Phase 1:\n",
-    "\n",
-    "   * 2020-02-02 to 2020-02-17\n",
-    "   * Data gathering: Individual decoding of WHO daily reports, collection of data from China, Taiwan, \n",
-    "    and other countries. Data collection was time consuming and aligning timestamps was\n",
-    "    problematic. \n",
-    "   * Data analysis: Focus on keeping up with the online updates from China and communicating the rapidly changing data.\n",
-    "   * Data reporting: Online visualizations were built with Tableau Public.\n",
-    "    \n",
-    "### Phase 2:\n",
-    "\n",
-    "   * 2020-02-18 to 2020-03-11\n",
-    "   * Data gathering: Transitioned to using only the daily reports from the Johns-Hopkins GitHub repository at\n",
-    "   https://systems.jhu.edu/research/public-health/ncov/ csse_covid_19_data/csse_covid_19_daily_reports  \n",
-    "       * This simpified data handling and improved consistency with other reports.\n",
-    "   * Data analysis: This phase looked at discrepancies between the data from China and that from other\n",
-    "   parts of the world.\n",
-    "   * Data reporting: Online visualizations built with Tableau Public.\n",
-    "    \n",
-    "### Phase 3: \n",
-    "\n",
-    "   * 2020-03-12 to present\n",
-    "   * Data gathering: Daily statistics (confirmed, recovered, deaths) are from the Johns-Hopkins GitHub repository.\n",
-    "   * Data analysis: Tracking the U.S. response in particular as both citizens and government entities decide \n",
-    "   how to react.\n",
-    "   * Data reporting: Online visualizations built with Tableau Public initially."
+    "### Step 1: Gather the virus data (confirmed, death, recovered) from the JH github repo and combine"
    ]
   },
   {
@@ -82,9 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import pandas as pd"
    ]
   },
   {
@@ -120,22 +78,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Check that the location columns will line up for merge later\n",
-    "df_locations = pd.DataFrame(columns=['ps_c','cr_c'])\n",
+    "df_locations = pd.DataFrame(columns=['provincestate_confirmed','countryregion_confirmed'])\n",
     "#df_confirmed.columns\n",
     "\n",
-    "df_locations[['ps_c','cr_c']] = df_confirmed[['Province/State','Country/Region']]\n",
-    "df_locations[['ps_d','cr_d']] = df_deaths[['Province/State','Country/Region']]\n",
-    "df_locations[['ps_r','cr_r']] = df_recovered[['Province/State','Country/Region']]"
+    "df_locations[['provincestate_confirmed','countryregion_confirmed']] = df_confirmed[['Province/State','Country/Region']]\n",
+    "df_locations[['provincestate_deaths',   'countryregion_deaths']]    = df_deaths[['Province/State','Country/Region']]\n",
+    "df_locations[['provincestate_recovered','countryregion_recovered']] = df_recovered[['Province/State','Country/Region']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -159,12 +117,12 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ps_c</th>\n",
-       "      <th>cr_c</th>\n",
-       "      <th>ps_d</th>\n",
-       "      <th>cr_d</th>\n",
-       "      <th>ps_r</th>\n",
-       "      <th>cr_r</th>\n",
+       "      <th>provincestate_confirmed</th>\n",
+       "      <th>countryregion_confirmed</th>\n",
+       "      <th>provincestate_deaths</th>\n",
+       "      <th>countryregion_deaths</th>\n",
+       "      <th>provincestate_recovered</th>\n",
+       "      <th>countryregion_recovered</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -218,15 +176,22 @@
        "</div>"
       ],
       "text/plain": [
-       "      ps_c       cr_c     ps_d       cr_d     ps_r       cr_r\n",
-       "0  no text   Thailand  no text   Thailand  no text   Thailand\n",
-       "1  no text      Japan  no text      Japan  no text      Japan\n",
-       "2  no text  Singapore  no text  Singapore  no text  Singapore\n",
-       "3  no text      Nepal  no text      Nepal  no text      Nepal\n",
-       "4  no text   Malaysia  no text   Malaysia  no text   Malaysia"
+       "  provincestate_confirmed countryregion_confirmed provincestate_deaths  \\\n",
+       "0                 no text                Thailand              no text   \n",
+       "1                 no text                   Japan              no text   \n",
+       "2                 no text               Singapore              no text   \n",
+       "3                 no text                   Nepal              no text   \n",
+       "4                 no text                Malaysia              no text   \n",
+       "\n",
+       "  countryregion_deaths provincestate_recovered countryregion_recovered  \n",
+       "0             Thailand                 no text                Thailand  \n",
+       "1                Japan                 no text                   Japan  \n",
+       "2            Singapore                 no text               Singapore  \n",
+       "3                Nepal                 no text                   Nepal  \n",
+       "4             Malaysia                 no text                Malaysia  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,41 +203,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of mismatched location columns: 0\n"
+      "mismatch on row!\n",
+      "provincestate_confirmed    no text\n",
+      "countryregion_confirmed     Guinea\n",
+      "provincestate_deaths       no text\n",
+      "countryregion_deaths        Guinea\n",
+      "provincestate_recovered    no text\n",
+      "countryregion_recovered      Kenya\n",
+      "isMisMatch                    True\n",
+      "Name: 414, dtype: object\n",
+      "\n",
+      "mismatch on row!\n",
+      "provincestate_confirmed    no text\n",
+      "countryregion_confirmed      Aruba\n",
+      "provincestate_deaths       no text\n",
+      "countryregion_deaths         Aruba\n",
+      "provincestate_recovered    no text\n",
+      "countryregion_recovered     Guinea\n",
+      "isMisMatch                    True\n",
+      "Name: 415, dtype: object\n",
+      "\n",
+      "mismatch on row!\n",
+      "provincestate_confirmed    Grand Princess\n",
+      "countryregion_confirmed            Canada\n",
+      "provincestate_deaths       Grand Princess\n",
+      "countryregion_deaths               Canada\n",
+      "provincestate_recovered           no text\n",
+      "countryregion_recovered             Aruba\n",
+      "isMisMatch                           True\n",
+      "Name: 416, dtype: object\n",
+      "\n",
+      "mismatch on row!\n",
+      "provincestate_confirmed           no text\n",
+      "countryregion_confirmed             Kenya\n",
+      "provincestate_deaths              no text\n",
+      "countryregion_deaths                Kenya\n",
+      "provincestate_recovered    Grand Princess\n",
+      "countryregion_recovered            Canada\n",
+      "isMisMatch                           True\n",
+      "Name: 417, dtype: object\n",
+      "\n",
+      "\n",
+      "\n",
+      "Number of mismatched location columns: 4\n",
+      " This indicates that the 3 files (confirmed, recovered, deaths) may have different countries listed.\n",
+      " Depending on how the data is merged, some data could be lost.\n"
      ]
     }
    ],
    "source": [
-    "# Added in v2 -- check for mismatched location names between the files\n",
+    "def check_match(s: pd.core.series.Series) -> pd.core.series.Series:\n",
+    "    '''Check that all Province/State matches in c, r, and d files\n",
+    "       Check that all Country/Region matches in c, r, and d files\n",
+    "       Return a flag True if isMisMatch\n",
+    "    '''\n",
     "\n",
-    "def check_isMisMatch(a,b,c,d,e,f):\n",
-    "    #print(type(a))\n",
-    "    #print(a)\n",
-    "    \n",
-    "    if ((a == b) & (a == c) & (d == e) & (d == f)):\n",
-    "        return False \n",
+    "    if ((s['provincestate_confirmed'] == s['provincestate_recovered']) & \\\n",
+    "        (s['provincestate_confirmed'] == s['provincestate_deaths']) &\\\n",
+    "        (s['countryregion_confirmed'] == s['countryregion_recovered']) & \\\n",
+    "        (s['countryregion_confirmed'] == s['countryregion_deaths'])):\n",
+    "        s['isMisMatch'] = False \n",
     "    else:\n",
-    "        print(\"mismatch on row! {}\".format(one_row))\n",
-    "        return True\n",
+    "        print(\"mismatch on row!\\n{}\\n\".format(s))\n",
+    "        s['isMisMatch'] = True\n",
+    "    return s\n",
     "\n",
     "\n",
-    "df_locations['isMisMatch'] = df_locations.apply(lambda row: check_isMisMatch(row['ps_c'],row['ps_d'],row['ps_r'],\\\n",
-    "                                                                             row['cr_c'],row['cr_d'],row['cr_r']),\\\n",
-    "                                                                    axis=1)\n",
+    "df_locations = df_locations.apply(check_match, axis=1)\n",
     "\n",
-    "print(\"Number of mismatched location columns: {}\".format(df_locations['isMisMatch'].sum()))"
+    "# 2020.03.15 This check flagged that 4 items were out of order: Aruba, Canada (Diamond Princess), Guinea, Kenya\n",
+    "#   However, on inspection, all 4 have line items they're just out of order.\n",
+    "#   TODO: Today, let this go, but this check should be refactored so that it checks content and ignores order.\n",
+    "\n",
+    "print(\"\\n\\nNumber of mismatched location columns: {}\".format(df_locations['isMisMatch'].sum()))\n",
+    "print(\" This indicates that the 3 files (confirmed, recovered, deaths) may have different countries listed.\")\n",
+    "print(\" Depending on how the data is merged, some data could be lost.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +411,7 @@
        "4            NaN       Malaysia   2.5000  112.5000  1/22/20          0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +514,7 @@
        "4            NaN       Malaysia   2.5000  112.5000  1/22/20       0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +617,7 @@
        "4            NaN       Malaysia   2.5000  112.5000  1/22/20          0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +754,7 @@
        "4       0          0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,15 +775,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-03-12_215749\n",
-      "consolidated_COVID-19_2020-03-12_215749UTC.csv\n"
+      "2020-03-16_012544\n",
+      "consolidated_COVID-19_2020-03-16_012544UTC.csv\n"
      ]
     }
    ],
@@ -781,11 +805,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "d2.to_csv(fname,index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# also declare it to be \"most recent\" in preparation for the next step\n",
+    "d2.to_csv('most_recent_COVID-19.csv',index=False)"
    ]
   },
   {
